# xrl-playbox

./: README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/i18n/: en.json  es.json  ja.json  zh-CN.json
src/components/: AppShell.vue  ExitConfirmDialog.vue
src/composables/: useExitConfirm.ts  useGames.ts  useTheme.ts
src/games/: index.ts
src/games/selftest/: tests.ts  types.ts
src/games/sokoban/: SokobanGenerator.perf.test.ts  SokobanGenerator.ts
src/games/typing/: TypingEngine.ts  passages.ts
src/router/: index.ts
src/stores/: useAchievementStore.ts  useSettingsStore.ts  useSokobanStore.ts
src/types/: index.ts
src/utils/: random.ts
src/views/: AchievementsView.vue  DealOrNoDealView.vue  HomeView.vue  SelfTestView.vue  SettingsView.vue  SokobanView.vue  TypingView.vue
