[package]
name = "xrl-playbox"
version = "0.1.0"
description = "XRL Playbox - A Tauri-based mini game collection"
authors = ["wpy030414"]
edition = "2021"

[lib]
name = "xrl_playbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
